--- a/locale/en.txt
+++ b/locale/en.txt
@@ -119,4 +119,4 @@ HTMLText_23F067B8_0C0A_629D_41A9_1A1C797BB055_mobile.html = <div style="text-ali
 ### Description
 
 ### Title
-tour.name = gedung kompas
+tour.name = gedung aa maramis
